# car_rental

./: .gitignore  README.md
backend/: CMakeLists.txt  CMakePresets.json  main  main.cpp
backend/db/: example.db  sqlite.cpp
backend/dependencies/sqllite3/: sqlite_manager.h
car_rental/car_rental/: main.cpp
car_rental/car_rental.xcodeproj/: project.pbxproj
car_rental/car_rental.xcodeproj/project.xcworkspace/xcuserdata/urban.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/: index.html  package-lock.json
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/: EditRental.vue  FormAddRental.vue  FormAddVehicle.vue  FormDeleteUser.vue  FormDeleteVehicle.vue  FromAddUser.vue  MenageRentals.vue  TestApi.vue
frontend/src/router/: index.js
frontend/src/views/: AdminCarsView.vue  AdminPanel.vue  AdminRentalsView.vue  AdminUsersView.vue  HomeView.vue
